# rehab_3_dof

install/: local_setup.sh  setup.sh
install/Visualize/lib/Visualize/: data_plot
install/Visualize/share/Visualize/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/can_odrive_interface/lib/can_odrive_interface/: position_node  read_encoder_node  torque_node  velocity_node
install/can_odrive_interface/share/can_odrive_interface/: package.sh  package.xml
install/odrive_can_control/lib/odrive_can_control/: impedance_multi_control  odrive_can_node  odrive_initializer  position_controller  read_param  test_vel_rviz2  velocity_controller
install/odrive_can_control/share/ament_index/resource_index/parent_prefix_path/: odrive_can_control
install/odrive_can_control/share/odrive_can_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_can_control/share/odrive_can_control/cmake/: odrive_can_controlConfig.cmake
install/odrive_can_control/share/odrive_can_control/launch/: odrive_initializer.launch.py
install/odrive_can_interface/include/odrive_can_interface/: odrive_can_interface.hpp
install/odrive_can_interface/share/odrive_can_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odrive_can_interface/share/odrive_can_interface/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_odrive_can_interfaceExport-noconfig.cmake  export_odrive_can_interfaceExport.cmake  odrive_can_interfaceConfig.cmake
install/odrive_joint_state_publisher/lib/odrive_joint_state_publisher/: odrive_joint_state_publisher_node
install/odrive_joint_state_publisher/share/odrive_joint_state_publisher/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_joint_state_publisher/share/odrive_joint_state_publisher/cmake/: odrive_joint_state_publisherConfig.cmake
install/rehab_arm_robot/share/rehab_arm_robot/: local_setup.sh  package.sh
install/rehab_arm_robot_control/lib/rehab_arm_robot_control/: arm_odrive_bridge  moveit_odrive_bridge  planning  rrt_motion_planning  state_reader
install/rehab_arm_robot_control/share/ament_index/resource_index/package_run_dependencies/: rehab_arm_robot_control
install/rehab_arm_robot_control/share/ament_index/resource_index/parent_prefix_path/: rehab_arm_robot_control
install/rehab_arm_robot_control/share/rehab_arm_robot_control/: package.sh
install/rehab_arm_robot_control/share/rehab_arm_robot_control/cmake/: rehab_arm_robot_controlConfig.cmake
install/rehab_arm_robot_control/share/rehab_arm_robot_control/launch/: rehab_odrive_control.launch.py  rrt_planner.launch.py
install/rehab_arm_robot_moveit_config/share/ament_index/resource_index/parent_prefix_path/: rehab_arm_robot_moveit_config
install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/: local_setup.sh  package.sh
install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml
install/rehab_arm_robot_moveit_config/share/rehab_arm_robot_moveit_config/launch/: rehab_arm_bringup.launch.py
log/: latest_build
src/: README.md
src/Control/Data_pub/: CMakeLists.txt
src/Control/Data_pub/src/: data_pub_node.cpp
src/Control/Impedance_controller/: CMakeLists.txt
src/Control/Impedance_controller/launch/: impedance_control.launch.py
src/Control/Impedance_controller/src/: impedance_control_node.cpp
src/Control/Impedance_controller/yaml/: params.yaml
src/can_odrive_interface/include/can_odrive_interface/: odrive_interface.hpp
src/can_odrive_interface/src/: odrive_interface.cpp
src/can_odrive_interface/test/: test_position.cpp  test_read_encoder.cpp
src/odrive_can_control/: CMakeLists.txt  package.xml
src/odrive_can_control/src/: impedance_multi_control.cpp  odrive_can_node.cpp  odrive_initializer.cpp  position_controller.cpp  read_param.cpp  velocity_controller.cpp
src/odrive_joint_state_publisher/: CMakeLists.txt
src/odrive_joint_state_publisher/include/odrive_joint_state_publisher/: joint_state_publisher_node.hpp
src/odrive_joint_state_publisher/src/: odrive_joint_state_publisher_node.cpp
src/rehab_arm_robot/urdf/: rehab_arm_robot_real.urdf.xacro
src/rehab_arm_robot_control/: CMakeLists.txt  package.xml
src/rehab_arm_robot_control/launch/: rehab_odrive_control.launch.py
src/rehab_arm_robot_control/src/: arm_odrive_bridge.cpp  moveit_odrive_bridge.cpp  planning.cpp  rrt_motion_planning.cpp  state_reader.cpp
src/rehab_arm_robot_moveit_config/config/: kinematics.yaml  rehab_arm_robot.ros2_control.xacro  rehab_arm_robot.ros2_control_real.xacro  rehab_arm_robot.urdf.xacro  ros2_controllers.yaml
src/rehab_arm_robot_moveit_config/launch/: demo.launch.py  demo_with_controller.launch.py  move_group.launch.py  rehab_arm_standalone_moveit.launch.py
