<?xml version="1.0"?>
<package format="3">
  <name>rehab_arm_robot_control</name>
  <version>0.0.0</version>
  <description>ROS 2 package for RRT motion planning with rehab arm</description>
  <maintainer email="nocc@todo.todo">nocc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>odrive_can_interface</depend>
  <depend>moveit_visual_tools</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>