<?xml version="1.0"?>
<package format="3">
  <name>can_odrive_interface</name>
  <version>0.1.0</version>
  <description>ROS2 interface library for ODrive CAN control</description>
  <maintainer email="nocnoc31@example.com">nocc</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
